--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@heroicons/react": "2.0.18",
+    "@lottiefiles/dotlottie-react": "^0.17.7",
     "@material-tailwind/react": "2.1.4",
     "apexcharts": "3.44.0",
+    "framer-motion": "^12.23.24",
     "i18next": "^25.6.2",
     "i18next-browser-languagedetector": "^8.2.0",
+    "lottie-react": "^2.4.1",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-apexcharts": "1.4.1",
