--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "west",
+  "name": "SmartLife",
   "private": true,
   "version": "2.1.0",
   "type": "module",
@@ -13,6 +13,7 @@
     "@lottiefiles/dotlottie-react": "^0.17.7",
     "@material-tailwind/react": "2.1.4",
     "apexcharts": "3.44.0",
+    "axios": "^1.13.2",
     "framer-motion": "^12.23.24",
     "i18next": "^25.6.2",
     "i18next-browser-languagedetector": "^8.2.0",
