--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,11 +69,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Build (Vite)
         run: npm run build
