--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "i18next": "^25.6.2",
     "i18next-browser-languagedetector": "^8.2.0",
     "lottie-react": "^2.4.1",
+    "lucide-react": "^0.562.0",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-apexcharts": "1.4.1",
