--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   },
   "dependencies": {
     "@heroicons/react": "2.0.18",
+    "@hookform/resolvers": "^5.2.2",
     "@lottiefiles/dotlottie-react": "^0.17.7",
     "@material-tailwind/react": "2.1.4",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@vis.gl/react-google-maps": "^1.7.1",
     "apexcharts": "3.44.0",
     "axios": "^1.13.2",
     "framer-motion": "^12.23.24",
     "i18next": "^25.6.2",
     "i18next-browser-languagedetector": "^8.2.0",
+    "leaflet": "^1.9.4",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.562.0",
     "prop-types": "15.8.1",
@@ -24,8 +28,11 @@
     "react-apexcharts": "1.4.1",
     "react-country-flag": "^3.1.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.71.1",
     "react-i18next": "^16.3.3",
-    "react-router-dom": "6.17.0"
+    "react-leaflet": "^4.2.1",
+    "react-router-dom": "6.17.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/react": "18.2.31",
